# CTorch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  main.cpp
src/: array.cpp  array.h  backwards.cpp  functions.cpp  gradients.cpp  linear.cpp  linear.h  tensor  tensor.cpp  tensor.h
src/mnist/: MNIST_Neural_Network.cpp  mnist.cpp
src/tensor.dSYM/Contents/: Info.plist
src/tensor.dSYM/Contents/Resources/DWARF/: tensor
src/tensor.dSYM/Contents/Resources/Relocations/aarch64/: tensor.yml
tests/: arrayTests.cpp  array_test.cpp  backwards_test.cpp  functions_test.cpp  gradient_test.cpp  linear_test.cpp  tensorTests.cpp  tensor_test.cpp
